--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.81.0"
+    "recharts": "^2.13.3",
+    "sass": "^1.81.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
