--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "motion": "^11.12.0",
     "next": "14.2.18",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "recharts": "^2.13.3",
     "sass": "^1.81.0",
